script to append to BQ table

--- a/requirements.txt
+++ b/requirements.txt
@@ -21,6 +21,7 @@ protobuf
 #our project
 opencv-python
 mediapipe
+pandas_gbq
 
 
 # Trick to install the version of Tensorflow depending on your processor: darwin == Mac, ARM == M1
