--- a/requirements.txt
+++ b/requirements.txt
@@ -19,10 +19,11 @@ pyarrow
 protobuf
 
 #our project
-#opencv-python
-opencv-python-headless
+opencv-python
+#opencv-python-headless
 mediapipe
 streamlit
+streamlit-webrtc
 
 
 # Trick to install the version of Tensorflow depending on your processor: darwin == Mac, ARM == M1
