replaced bq_keys.json file with st.secrets

--- a/requirements.txt
+++ b/requirements.txt
@@ -26,6 +26,7 @@ joblib
 mediapipe
 streamlit
 streamlit-webrtc
+gcsfs
 
 
 # Trick to install the version of Tensorflow depending on your processor: darwin == Mac, ARM == M1
