--- a/requirements.txt
+++ b/requirements.txt
@@ -31,8 +31,9 @@ gcsfs
 
 # Trick to install the version of Tensorflow depending on your processor: darwin == Mac, ARM == M1
 # tensorflow-macos==2.13.0rc1; sys_platform == 'darwin' and 'ARM' in platform_version # Mac M-chips
-tensorflow-lite==2.12.0; sys_platform == 'darwin' and 'ARM' not in platform_version # Mac Intel chips
+# tensorflow-lite==2.12.0; sys_platform == 'darwin' and 'ARM' not in platform_version # Mac Intel chips
 tensorflow-lite==2.12.0; sys_platform != 'darwin' # Windows & Ubuntu Intel chips
+
 # prevent bq 3+ db-dtypes package error when running training from bq
 
 mlflow==2.1.1
