--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,13 @@
-wheel
-nbresult
-colorama
+# wheel
+# nbresult
+# colorama
 ipdb
-ipykernel
-yapf
-matplotlib
-pygeohash
-pytest
-seaborn
+# ipykernel
+# yapf
+# matplotlib
+# pygeohash
+# pytest
+# seaborn
 numpy==1.23.5
 pandas==1.5.3
 scipy==1.10.0
@@ -23,8 +23,10 @@ xgboost
 opencv-python
 joblib
 #opencv-python-headless
-mediapipe
-streamlit
+altair<5
+mediapipe==0.10.1
+streamlit==1.13.0
+watchdog
 streamlit-webrtc
 gcsfs
 
@@ -35,16 +37,16 @@ tensorflow==2.13.0rc1; sys_platform == 'darwin' and 'ARM' not in platform_versio
 tensorflow==2.13.0rc1; sys_platform != 'darwin' # Windows & Ubuntu Intel chips
 # prevent bq 3+ db-dtypes package error when running training from bq
 
-mlflow==2.1.1
+# mlflow==2.1.1
 
 python-dotenv
-prefect==2.8.1
-psycopg2-binary
+# prefect==2.8.1
+# psycopg2-binary
 
-# API
-fastapi
-pytz
-uvicorn
-# tests
-httpx
-pytest-asyncio
+# # API
+# fastapi
+# pytz
+# uvicorn
+# # tests
+# httpx
+# pytest-asyncio
