--- a/requirements.txt
+++ b/requirements.txt
@@ -20,8 +20,7 @@ protobuf
 xgboost
 
 #our project
-# opencv-python
-opencv-python-headless
+opencv-python
 joblib
 #opencv-python-headless
 altair<5
