--- a/requirements.txt
+++ b/requirements.txt
@@ -32,7 +32,7 @@ gcsfs
 
 opencv-python-headless==4.7.0.72
 streamlit_webrtc==0.45.1
-# twilio~=8.4.0
+twilio~=8.4.0
 
 
 # Trick to install the version of Tensorflow depending on your processor: darwin == Mac, ARM == M1
